# Control-Testing-Automation

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: chats.py  items.py  sessions.py
backend/app/schema/: schemas.py
backend/app/services/: excel_ingestion.py  llm_service.py  pdf_ingestion.py  rag_setup.py
backend/data/: database.py
backend/data/excel/: Mapping ORX Taxonomy to EBA final taxonomy - September 2025.xlsx  ORX Cause & Impact Taxonomy Reference Taxonomy Data File.xlsx  ORX Reference Control Library May 2022.xlsx
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: HomeView.css  HomeView.jsx
frontend/src/components/Chat/: ChatInput.css  ChatInput.jsx  ChatWindow.css  ChatWindow.jsx  MessageBubble.css  MessageBubble.jsx  MessageList.css  MessageList.jsx
frontend/src/components/Layout/: AppLayout.css  AppLayout.jsx  Header.css  Header.jsx
frontend/src/components/common/: IconButton.css  IconButton.jsx  Loader.css  Loader.jsx
frontend/src/hooks/: useChat.js
frontend/src/styles/: chat.css  global.css
frontend/src/types/: chat.js
